--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@samkirkland/ftp-deploy",
-  "version": "1.1.0",
+  "name": "@gryphonDev1/ftp-deploy",
+  "version": "0.0.2",
   "private": false,
   "description": "Deploy files to a ftp server",
   "main": "dist/module.js",
